# python-package-template

./: .gitignore  Makefile  README.md  cookiecutter.json  pyproject.toml
cookiecutter_pptx/: __init__.py
docs/source/: conf.py  index.rst
hooks/: pre_gen_project.py
jinja2pptx/: __init__.py
tests/: test_metadata.py
{{ cookiecutter.repo_name }}/: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
{{ cookiecutter.repo_name }}/.github/: PULL_REQUEST_TEMPLATE.md
{{ cookiecutter.repo_name }}/.github/workflows/: build.yml  release.yml
{{ cookiecutter.repo_name }}/docs/source/: conf.py  index.rst
{{ cookiecutter.repo_name }}/tests/: test_metadata.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.python_package }}/: __init__.py
