[tool.poetry]
name = "jinja2pptx"
version = "0.1.0"
description = "cookiecutter support for pptx presentations"
authors = ["nickolasrm <nickolasrochamachado@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "cookiecutter_pptx"}]

[tool.poetry.dependencies]
python = "^3.9"
python-pptx = "^0.6.21"
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
flake8 = "^5.0.4"
black = "^22.10.0"
mypy = "^0.982"
pre-commit = "^2.20.0"
pylint = "^2.15.4"
Sphinx = "^5.2.3"
tomli = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
