[tool.poetry]
name = "{{ cookiecutter.python_package }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.description }}"
authors = [
    {% set authors = cookiecutter.author.split(',') -%}
    {% set emails = cookiecutter.email.split(',') -%}
    {% for author in authors -%}
    "{{ authors[loop.index0].strip() }} <{{ emails[loop.index0].strip() }}>",
    {% endfor -%}
]
license = "MIT"
readme = "README.md"
packages = [{include = "{{ cookiecutter.python_package }}"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
flake8 = "^5.0.4"
black = "^22.10.0"
mypy = "^0.982"
pre-commit = "^2.20.0"
pylint = "^2.15.4"
Sphinx = "^5.2.3"
tomli = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
